View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0023487 | Open CASCADE | OCCT:Modeling Data | public | 2012-10-24 11:17 | 2013-04-29 15:21 |
Reporter | Assigned To | ||||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Platform | A | OS | L | ||
Product Version | 6.5.3 | ||||
Target Version | 6.6.0 | Fixed in Version | 6.6.0 | ||
Summary | 0023487: Remove obsolete BRepTools::OuterShell() function | ||||
Description | As described in issue #23129, BRepTools::OuterShell() function works wrong - it always returns the first shell, while its documentation says that it should return the outer most shell of the solid passed as parameter. New function BRepClass3d::OuterShell(), that provides correct result, is implemented in frames of issue #23129. The function BRepTools::OuterShell() is now considered obsolete: it should be removed from OCCT and all corresponding calls to it should be replaced by new function, if it is feasible (as new function belongs to the upper-level API). | ||||
Steps To Reproduce | See issue #23129. | ||||
Tags | No tags attached. | ||||
Test case number | Not needed | ||||
|
Deleted function BRepTools::OuterShell(), all corresponding calls to BRepTools::OuterShell() replaced by function BRepClass3d::OuterShell(). Please, review my code. |
|
Julia, please review proposed patch. |
|
No remarks, please test |
|
Dear BugMaster, Branch CR23487 (and products from GIT master) was compiled on Linux and Windows platforms and tested. Regressions: xcaf brep_to_stp_add_CL (009) B6 B9 C7 D2 D4 F2 F6 F7 G7 G9 Regressions: dec 009 B6 B9 C7 D2 D4 F2 F6 F7 G7 G9 New behaviour: chl 926 D5 Improvements: Not detected Testing cases: Not needed See results in /QADisk/occttests/results/KAS/dev/CR23487-master-products_02112012 See reference results in /QADisk/occttests/results/KAS/dev/CR-2012-10-12-IR-2012-10-12-products See test cases in /QADisk/occttests/tests/ED N.B. In order to launch testing case you can make use the following instructions http://doc/doku.php?id=occt:certification |
|
Changes in BRepClass3d::OuterShell If solid has only one shell, then it will return, without checking orientation. Please, review changes. |
|
No remarks, please test |
|
Dear BugMaster, Branch CR23487 (and products from GIT master) was compiled on Linux and Windows platforms and tested. Regressions: Not detected Improvements: Not detected Testing cases: Not needed |
occt: master 2f0109b7 2012-11-23 11:01:28
|
0023487: Remove obsolete BRepTools::OuterShell() function All corresponding calls to BRepTools::OuterShell() replaced by function BRepClass3d::OuterShell() Changed function BRepClass3d::OuterShell |
Affected Issues 0023487 |
|
mod - src/BRepClass3d/BRepClass3d.cdl | Diff File | ||
mod - src/BRepClass3d/BRepClass3d.cxx | Diff File | ||
mod - src/BRepTools/BRepTools.cdl | Diff File | ||
mod - src/BRepTools/BRepTools.cxx | Diff File | ||
mod - src/TopoDSToStep/TopoDSToStep_MakeBrepWithVoids.cxx | Diff File | ||
mod - src/TopoDSToStep/TopoDSToStep_MakeFacetedBrep.cxx | Diff File | ||
mod - src/TopoDSToStep/TopoDSToStep_MakeFacetedBrepAndBrepWithVoids.cxx | Diff File | ||
mod - src/TopoDSToStep/TopoDSToStep_MakeManifoldSolidBrep.cxx | Diff File | ||
mod - src/TopOpeBRepBuild/TopOpeBRepBuild_KPart.cxx | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2012-10-24 11:17 |
|
New Issue | |
2012-10-24 11:17 |
|
Assigned To | => jgv |
2012-10-24 11:19 |
|
Status | new => assigned |
2012-10-26 14:52 |
|
Assigned To | jgv => abv |
2012-10-26 16:15 |
|
Assigned To | abv => ilv |
2012-10-29 13:12 |
|
Note Added: 0021987 | |
2012-10-29 13:12 |
|
Assigned To | ilv => vsr |
2012-10-29 13:12 |
|
Status | assigned => resolved |
2012-11-01 09:23 |
|
Note Added: 0022041 | |
2012-11-01 09:23 |
|
Assigned To | vsr => jgv |
2012-11-01 09:39 |
|
Note Added: 0022042 | |
2012-11-01 09:39 |
|
Assigned To | jgv => bugmaster |
2012-11-01 09:39 |
|
Status | resolved => reviewed |
2012-11-02 15:34 |
|
Note Added: 0022081 | |
2012-11-02 15:35 |
|
Test case number | => Not needed |
2012-11-02 15:35 |
|
Assigned To | bugmaster => ilv |
2012-11-02 15:35 |
|
Status | reviewed => assigned |
2012-11-14 17:48 |
|
Note Edited: 0022081 | |
2012-11-14 17:53 |
|
Note Edited: 0022081 | |
2012-11-15 17:03 |
|
Note Added: 0022271 | |
2012-11-15 17:03 |
|
Assigned To | ilv => abv |
2012-11-15 17:03 |
|
Status | assigned => resolved |
2012-11-19 12:12 |
|
Note Added: 0022293 | |
2012-11-19 12:12 |
|
Assigned To | abv => bugmaster |
2012-11-19 12:12 |
|
Status | resolved => reviewed |
2012-11-19 18:37 |
|
Assigned To | bugmaster => mkv |
2012-11-20 17:54 |
|
Note Added: 0022314 | |
2012-11-20 17:55 |
|
Assigned To | mkv => bugmaster |
2012-11-20 17:55 |
|
Status | reviewed => tested |
2012-11-26 15:45 |
|
Changeset attached | => occt master 2f0109b7 |
2012-11-26 15:45 |
|
Assigned To | bugmaster => ilv |
2012-11-26 15:45 |
|
Status | tested => verified |
2012-11-26 15:45 |
|
Resolution | open => fixed |
2012-12-10 17:16 |
|
Changeset attached | => occt master 2f0109b7 |
2013-04-23 13:36 |
|
Status | verified => closed |
2013-04-29 15:21 |
|
Fixed in Version | => 6.6.0 |