0023487: Remove obsolete BRepTools::OuterShell() function

All corresponding calls to BRepTools::OuterShell() replaced by function BRepClass3d::OuterShell()
Changed function BRepClass3d::OuterShell